# StrategyForge

./: .gitignore  Cargo.toml  GameDescription.md  README.md  build_errors.txt  cargo_errors.json  clippy_errors.txt  game_over_backup.rs  game_over_fixed.rs  main_menu_fixed.rs
assets/fonts/: README.txt  download_instructions.txt
assets/sprites/: README.md  air_units.py  blender_isometric_exporter.py  combat_units.py  efficient_air_units_generator.py  efficient_artillery_generator.py  efficient_base_generator.py  efficient_ground_units_generator.py  efficient_mobile_base_generator.py  efficient_tank_generator.py  first_tank_example.py  resource_units.py  steampunk_base.py
src/: color_test.rs  components.rs  debug.rs  entities.rs  lib.rs  main.rs  resources.rs  sprites.rs  states.rs  systems.rs  utils.rs
src/components/: ai.rs  base_modules.rs  building.rs  mod.rs  player.rs  resource.rs  strategic.rs  terrain.rs  unit.rs  unit_label.rs  unit_sprite.rs
src/entities/: building_types.rs  mobile_base.rs  mod.rs  resource_types.rs  unit_types.rs
src/resources/: map_data.rs  resource_nodes.rs  sprite_loader.rs
src/states/: game_over.rs  game_state.rs  gameplay.rs  loading.rs  main_menu.rs  mod.rs
src/systems/: ai.rs  base_initialization.rs  base_movement.rs  camera.rs  camera_manager.rs  combat.rs  economy.rs  input.rs  mod.rs  module_effects.rs  movement.rs  production.rs  ui.rs
src/tech/: faction_tech.rs  mod.rs  tech_effects.rs  tech_requirements.rs  tech_tree.rs  tech_ui.rs
src/ui/: base_action_ui.rs  mod.rs  (+2 more)
tests/: Cargo.toml  module_tests.rs
(+24 files in other folders)
