[package]
name = "strategy_forge"
version = "0.1.0"
edition = "2021"
authors = ["Juston"]
description = "A real-time strategy game built with Rust"

[dependencies]
bevy = "0.14.0"
bevy_rapier2d = "0.25.0"  # Physics engine integration
rand = "0.8.5"            # Random number generation
pathfinding = "4.3.0"     # For unit pathfinding
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
ron = "0.8.1"             # Rusty Object Notation (for game data)

[dev-dependencies]
bevy-inspector-egui = "0.23.0"  # Debug UI tools

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
